Bug fix: Agree button placement on mobile was behind the zopim button

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -29,8 +29,10 @@
 	}
 
 	.cookie-agree-btn {
-		float: right;
 		text-transform: uppercase;
+		@media screen and (min-width: 600px) {
+			float: right;
+		}
 	}
 
 	a {
